6604044: java crashes talking to second X screen

Reviewed-by: prr